--- a/src/Style/Views/Drawers/Timeline.scss
+++ b/src/Style/Views/Drawers/Timeline.scss
@@ -57,12 +57,12 @@
                 display: inline-block;
                 border-radius: 1.5rem 1.5rem 1.5rem 0;
                 border: 0;
-                padding: 0 0.5rem;
-                transform: rotate(-45deg);
+                padding: 0.25rem 0.5rem;
+                line-height: 1;
+                transform: rotate(-25deg);
                 white-space: nowrap;
                 font-weight: bold;
-                line-height: 2rem;
-                height: 2rem;
+                font-size: 0.7rem;
 
                 &.alert {
                     background-color: red;
