--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -18,6 +18,7 @@
 @import './Views/Modals/Modal';
 
 @import './Views/Charts/PieChart';
+@import './Views/Charts/CoinStack';
 
 @import './Views/Pages/Page';
 @import './Views/Pages/Setup';
