--- a/src/Style/Views/Charts/PieChart.scss
+++ b/src/Style/Views/Charts/PieChart.scss
@@ -3,6 +3,7 @@
 
     &__label {
         margin-top: 1rem;
+        overflow: visible;
 
         &__percent {
             background-color: lightblue;
