--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -14,8 +14,10 @@
 @import './Views/Drawers/Timeline';
 @import './Views/Drawers/Notifications';
 @import './Views/Drawers/Stats';
+@import './Views/Drawers/Controls';
 
 @import './Views/Modals/Modal';
+@import './Views/Modals/VATReportingTool';
 
 @import './Views/Charts/PieChart';
 @import './Views/Charts/CoinStack';
