--- a/src/Style/Utilities/Typography.scss
+++ b/src/Style/Utilities/Typography.scss
@@ -1,17 +1,21 @@
 html {
-    font-size: 1.2vw;
+    font-size: 16px;
     
     @media($md) {
-        font-size: 1.8vw;
+        font-size: 15px;
     }
 
     @media($sm) {
-        font-size: 2.5vw;
+        font-size: 14px;
     }
     
     @media($xs) {
-        font-size: 3.5vw;
+        font-size: 13px;
     }
+}
+
+html, body {
+    height: 100%;
 }
 
 body {
