--- a/src/Style/Views/Charts/CoinStack.scss
+++ b/src/Style/Views/Charts/CoinStack.scss
@@ -12,9 +12,11 @@
 
 .coin-stack {
     transition: height 1s step-start;
-    bottom: 0;
-    margin: 1rem;
+    bottom: 1rem;
     text-align: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     
     &__stack, &__coin {
         width: 100px;
