--- a/src/Style/Views/Pages/Page.scss
+++ b/src/Style/Views/Pages/Page.scss
@@ -1,10 +1,21 @@
 .page {
-    width: calc(100% - 2rem);
-    max-width: 70rem;
-    margin: 3rem auto 0 auto;
+    background-color: dimgrey;
+    color: lightgrey;
+    height: 100%;
 
     &__title {
         text-align: center;
         margin-bottom: 2rem;
+    }
+
+    &__container {
+        width: calc(100% - 4rem);
+        max-width: 40rem;
+        margin: 0 auto;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
