--- a/src/Style/Views/Pages/Session.scss
+++ b/src/Style/Views/Pages/Session.scss
@@ -1,12 +1,6 @@
 .page--session {
-    margin-top: 6rem;
-
-    .coin-stack {
-        position: fixed;
-        bottom: 10rem;
-        left: 50%;
-        transform: translateX(-50%);
-    }
+    display: flex;
+    flex-direction: column;
 
     &.paused {
         &:after {
@@ -25,6 +19,48 @@
             height: 100%;
             z-index: 1000;
             pointer-events: none;
+        }
+    }
+
+    &__panel {
+        background-color: dimgrey;
+        color: lightgrey;
+        
+        &.middle {
+            flex-grow: 1;
+            display: flex;
+        }
+
+        &.center {
+            flex-grow: 1;
+            background-color: rgba(0, 0, 0, 0.3);
+            position: relative;
+            overflow: hidden;
+        }
+
+        &.bottom {
+            border-top: 1px solid black;
+        }
+
+        &.right {
+            border-left: 1px solid black;
+            display: flex;
+            flex-direction: column;
+        }
+
+        &.top {
+            border-bottom: 1px solid black;
+        }
+
+        &.left {
+            border-right: 1px solid black;
+        }
+
+        &.top,
+        &.left,
+        &.right,
+        &.bottom {
+            flex-shrink: 0;
         }
     }
 }
