--- a/src/Style/Views/Widgets/Widget.scss
+++ b/src/Style/Views/Widgets/Widget.scss
@@ -1,5 +1,6 @@
 .widget {
     display: block;
+    position: relative;
 
     &.text {
         &-center {
@@ -12,6 +13,38 @@
         
         &-right {
             text-align: right;
+        }
+    }
+
+    &__tooltip {
+        z-index: 900;
+        position: absolute;
+        top: calc(100% + 1rem);
+        left: 0;
+        padding: 0.5rem 1rem;
+        max-width: 100%;
+        background-color: white;
+        color: black;
+        font-size: 0.8rem;
+        text-align: left;
+        white-space: normal;
+        font-weight: normal;
+        border-radius: 0.2rem;
+        text-transform: none;
+
+        &:after {
+            border: solid transparent;
+            border-color: rgba(0, 0, 0, 0);
+            border-bottom-color: white;
+            bottom: 100%;
+            left: 1rem;
+            content: '';
+            height: 0;
+            width: 0;
+            position: absolute;
+            pointer-events: none;
+            border-width: 0.5rem;
+            margin-left: -0.5rem;
         }
     }
 }
