--- a/src/Style/Views/Charts/CoinStack.scss
+++ b/src/Style/Views/Charts/CoinStack.scss
@@ -16,7 +16,6 @@
     text-align: center;
     position: absolute;
     left: 50%;
-    transform: translateX(-50%);
     
     &__stack, &__coin {
         width: 100px;
@@ -26,9 +25,18 @@
     
     &__stack {
         height: 100%;
-        position: relative;
+        position: absolute;
         margin-bottom: 1rem;
-        
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+
+        @for $i from 1 through 200 {
+            &:nth-child(#{$i}) {
+                z-index: #{200 - $i};
+            }
+        }
+
         &:after {
             content: '';
             background-image: radial-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0) 80%);
